Proper VST plugin now built in VS

--- a/source/wrapper/VstWrapper.vcproj
+++ b/source/wrapper/VstWrapper.vcproj
@@ -42,13 +42,14 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories="&quot;$(ProjectDir)\vstsdk2.4&quot;;&quot;$(ProjectDir)\vstsdk2.4\public.sdk\source\vst2.x&quot;"
-				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;VSTWRAPPER_EXPORTS"
+				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;VSTWRAPPER_EXPORTS;_CRT_SECURE_NO_WARNINGS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				DebugInformationFormat="4"
+				CompileAs="0"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -62,6 +63,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				LinkIncremental="2"
+				ModuleDefinitionFile="VstWrapper.def"
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				TargetMachine="1"
@@ -116,12 +118,13 @@
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
 				AdditionalIncludeDirectories="&quot;$(ProjectDir)\vstsdk2.4&quot;;&quot;$(ProjectDir)\vstsdk2.4\public.sdk\source\vst2.x&quot;"
-				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;VSTWRAPPER_EXPORTS"
+				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;VSTWRAPPER_EXPORTS;_CRT_SECURE_NO_WARNINGS"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				DebugInformationFormat="3"
+				CompileAs="0"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -135,6 +138,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				LinkIncremental="1"
+				ModuleDefinitionFile="VstWrapper.def"
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				OptimizeReferences="2"
@@ -168,20 +172,6 @@
 	</References>
 	<Files>
 		<Filter
-			Name="Source"
-			Filter="cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx"
-			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
-			>
-			<File
-				RelativePath=".\VstWrapper.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\VstWrapper.h"
-				>
-			</File>
-		</Filter>
-		<Filter
 			Name="VST Source"
 			>
 			<File
@@ -206,6 +196,32 @@
 			</File>
 			<File
 				RelativePath=".\vstsdk2.4\public.sdk\source\vst2.x\vstplugmain.cpp"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="PluginCore Interface"
+			>
+		</Filter>
+		<Filter
+			Name="Source"
+			Filter="cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx"
+			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
+			>
+			<File
+				RelativePath=".\VstWrapper.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\VstWrapper.h"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="Resources"
+			>
+			<File
+				RelativePath=".\VstWrapper.def"
 				>
 			</File>
 		</Filter>
