--- a/windows/test.vcproj
+++ b/windows/test.vcproj
@@ -190,6 +190,14 @@
 				</File>
 			</Filter>
 		</Filter>
+		<Filter
+			Name="wrapper"
+			>
+			<File
+				RelativePath="..\test\wrapper\PluginLoaderWindowsTest.cpp"
+				>
+			</File>
+		</Filter>
 	</Files>
 	<Globals>
 	</Globals>
