--- a/windows/wrapper.vcproj
+++ b/windows/wrapper.vcproj
@@ -2,9 +2,9 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9,00"
-	Name="test"
-	ProjectGUID="{FEC147FF-85F2-434D-8F6B-BAA4AA114D70}"
-	RootNamespace="test"
+	Name="wrapper"
+	ProjectGUID="{AF5890DC-470B-49D7-B771-9186349BA8F6}"
+	RootNamespace="wrapper"
 	Keyword="Win32Proj"
 	TargetFrameworkVersion="196613"
 	>
@@ -20,7 +20,7 @@
 			Name="Debug|Win32"
 			OutputDirectory="$(SolutionDir)\build\$(ConfigurationName)"
 			IntermediateDirectory="$(OutDir)"
-			ConfigurationType="1"
+			ConfigurationType="4"
 			CharacterSet="1"
 			>
 			<Tool
@@ -41,8 +41,8 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="&quot;$(SolutionDir)\source&quot;;&quot;$(SolutionDir)\third-party\gtest\include&quot;"
-				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE"
+				AdditionalIncludeDirectories="&quot;$(SolutionDir)\source&quot;;&quot;$(SolutionDir)\third-party\vstsdk2.4&quot;;&quot;$(SolutionDir)\third-party\vstsdk2.4\public.sdk\source\vst2.x&quot;"
+				PreprocessorDefinitions="WINDOWS=1;WIN32;_DEBUG;_LIB;_CRT_SECURE_NO_WARNINGS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
@@ -60,21 +60,10 @@
 				Name="VCPreLinkEventTool"
 			/>
 			<Tool
-				Name="VCLinkerTool"
-				AdditionalDependencies="gtestd.lib gtest_maind.lib"
-				OutputFile="$(OutDir)\plugincore-test.exe"
-				LinkIncremental="2"
-				AdditionalLibraryDirectories="$(SolutionDir)\third-party\gtest\lib"
-				IgnoreDefaultLibraryNames=""
-				GenerateDebugInformation="true"
-				SubSystem="1"
-				TargetMachine="1"
+				Name="VCLibrarianTool"
 			/>
 			<Tool
 				Name="VCALinkTool"
-			/>
-			<Tool
-				Name="VCManifestTool"
 			/>
 			<Tool
 				Name="VCXDCMakeTool"
@@ -86,9 +75,6 @@
 				Name="VCFxCopTool"
 			/>
 			<Tool
-				Name="VCAppVerifierTool"
-			/>
-			<Tool
 				Name="VCPostBuildEventTool"
 			/>
 		</Configuration>
@@ -96,7 +82,7 @@
 			Name="Release|Win32"
 			OutputDirectory="$(SolutionDir)\build\$(ConfigurationName)"
 			IntermediateDirectory="$(OutDir)"
-			ConfigurationType="1"
+			ConfigurationType="4"
 			CharacterSet="1"
 			WholeProgramOptimization="1"
 			>
@@ -119,8 +105,8 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="&quot;$(SolutionDir)\source&quot;;&quot;$(SolutionDir)\third-party\gtest\include&quot;"
-				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
+				AdditionalIncludeDirectories="&quot;$(SolutionDir)\source&quot;;&quot;$(SolutionDir)\third-party\vstsdk2.4&quot;;&quot;$(SolutionDir)\third-party\vstsdk2.4\public.sdk\source\vst2.x&quot;"
+				PreprocessorDefinitions="WINDOWS=1;WIN32;NDEBUG;_LIB;_CRT_SECURE_NO_WARNINGS"
 				RuntimeLibrary="0"
 				EnableFunctionLevelLinking="true"
 				UsePrecompiledHeader="0"
@@ -137,22 +123,10 @@
 				Name="VCPreLinkEventTool"
 			/>
 			<Tool
-				Name="VCLinkerTool"
-				AdditionalDependencies="gtest.lib gtest_main.lib"
-				OutputFile="$(OutDir)\plugincore-test.exe"
-				LinkIncremental="1"
-				AdditionalLibraryDirectories="$(SolutionDir)\third-party\gtest\lib"
-				GenerateDebugInformation="true"
-				SubSystem="1"
-				OptimizeReferences="2"
-				EnableCOMDATFolding="2"
-				TargetMachine="1"
+				Name="VCLibrarianTool"
 			/>
 			<Tool
 				Name="VCALinkTool"
-			/>
-			<Tool
-				Name="VCManifestTool"
 			/>
 			<Tool
 				Name="VCXDCMakeTool"
@@ -164,9 +138,6 @@
 				Name="VCFxCopTool"
 			/>
 			<Tool
-				Name="VCAppVerifierTool"
-			/>
-			<Tool
 				Name="VCPostBuildEventTool"
 			/>
 		</Configuration>
@@ -175,26 +146,54 @@
 	</References>
 	<Files>
 		<Filter
-			Name="interface"
-			>
-			<Filter
-				Name="buffer"
-				>
-				<File
-					RelativePath="..\test\interface\buffer\AudioBufferSetTest.cpp"
-					>
-				</File>
-				<File
-					RelativePath="..\test\interface\buffer\AudioBufferTest.cpp"
-					>
-				</File>
-			</Filter>
-		</Filter>
-		<Filter
-			Name="wrapper"
+			Name="Source"
 			>
 			<File
-				RelativePath="..\test\wrapper\PluginLoaderWindowsTest.cpp"
+				RelativePath="..\source\wrapper\PluginLoader.h"
+				>
+			</File>
+			<File
+				RelativePath="..\source\wrapper\PluginLoaderWindows.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\source\wrapper\PluginLoaderWindows.h"
+				>
+			</File>
+			<File
+				RelativePath="..\source\wrapper\VstWrapper.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\source\wrapper\VstWrapper.h"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="VST Source"
+			>
+			<File
+				RelativePath="..\third-party\vstsdk2.4\public.sdk\source\vst2.x\aeffeditor.h"
+				>
+			</File>
+			<File
+				RelativePath="..\third-party\vstsdk2.4\public.sdk\source\vst2.x\audioeffect.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\third-party\vstsdk2.4\public.sdk\source\vst2.x\audioeffect.h"
+				>
+			</File>
+			<File
+				RelativePath="..\third-party\vstsdk2.4\public.sdk\source\vst2.x\audioeffectx.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\third-party\vstsdk2.4\public.sdk\source\vst2.x\audioeffectx.h"
+				>
+			</File>
+			<File
+				RelativePath="..\third-party\vstsdk2.4\public.sdk\source\vst2.x\vstplugmain.cpp"
 				>
 			</File>
 		</Filter>
