--- a/windows/vst.vcproj
+++ b/windows/vst.vcproj
@@ -174,6 +174,46 @@
 	</References>
 	<Files>
 		<Filter
+			Name="Source"
+			>
+			<File
+				RelativePath="..\source\wrapper\VstWrapper.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\source\wrapper\VstWrapper.h"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="VST Source"
+			>
+			<File
+				RelativePath="..\third-party\vstsdk2.4\public.sdk\source\vst2.x\aeffeditor.h"
+				>
+			</File>
+			<File
+				RelativePath="..\third-party\vstsdk2.4\public.sdk\source\vst2.x\audioeffect.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\third-party\vstsdk2.4\public.sdk\source\vst2.x\audioeffect.h"
+				>
+			</File>
+			<File
+				RelativePath="..\third-party\vstsdk2.4\public.sdk\source\vst2.x\audioeffectx.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\third-party\vstsdk2.4\public.sdk\source\vst2.x\audioeffectx.h"
+				>
+			</File>
+			<File
+				RelativePath="..\third-party\vstsdk2.4\public.sdk\source\vst2.x\vstplugmain.cpp"
+				>
+			</File>
+		</Filter>
+		<Filter
 			Name="Resources"
 			>
 			<File
