Setting proper executable name

--- a/mac/VstWrapper-Info.plist
+++ b/mac/VstWrapper-Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
-	<string>vst</string>
+	<string>VstWrapper</string>
 	<key>CFBundleGetInfoString</key>
 	<string>vst</string>
 	<key>CFBundleIconFile</key>
@@ -17,7 +17,7 @@
 	<key>CFBundlePackageType</key>
 	<string>BNDL</string>
 	<key>CFBundleSignature</key>
-	<string>Tera</string>
+	<string>&apos;Tera&apos;</string>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
 	<key>CSResourcesFileMapped</key>
