--- a/windows/wrapper.vcproj
+++ b/windows/wrapper.vcproj
@@ -41,14 +41,17 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="&quot;$(SolutionDir)\source&quot;"
-				PreprocessorDefinitions="WINDOWS=1;WIN32;_DEBUG;_LIB;_CRT_SECURE_NO_WARNINGS"
+				AdditionalIncludeDirectories="&quot;$(SolutionDir)&quot;;&quot;$(ProjectDir)&quot;;&quot;$(ProjectDir)\..\source&quot;"
+				PreprocessorDefinitions="_DEBUG;_LIB"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
-				UsePrecompiledHeader="0"
+				UsePrecompiledHeader="1"
+				PrecompiledHeaderThrough="PrefixWindows.h"
+				PrecompiledHeaderFile="$(IntDir)\$(TargetName).pch"
 				WarningLevel="3"
 				DebugInformationFormat="4"
+				ForcedIncludeFiles="PrefixWindows.h"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -105,13 +108,16 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="&quot;$(SolutionDir)\source&quot;"
-				PreprocessorDefinitions="WINDOWS=1;WIN32;NDEBUG;_LIB;_CRT_SECURE_NO_WARNINGS"
+				AdditionalIncludeDirectories="&quot;$(SolutionDir)&quot;;&quot;$(ProjectDir)&quot;;&quot;$(ProjectDir)\..\source&quot;"
+				PreprocessorDefinitions="NDEBUG;_LIB"
 				RuntimeLibrary="0"
 				EnableFunctionLevelLinking="true"
-				UsePrecompiledHeader="0"
+				UsePrecompiledHeader="1"
+				PrecompiledHeaderThrough="PrefixWindows.h"
+				PrecompiledHeaderFile="$(IntDir)\$(TargetName).pch"
 				WarningLevel="3"
 				DebugInformationFormat="3"
+				ForcedIncludeFiles="PrefixWindows.h"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -158,6 +164,10 @@
 			</File>
 			<File
 				RelativePath="..\source\wrapper\PluginLoaderWindows.h"
+				>
+			</File>
+			<File
+				RelativePath=".\PrefixWindows.h"
 				>
 			</File>
 		</Filter>
