Added common preprocessor definition file which can be used for both mac/windows

--- a/windows/PluginCoreInterface.vcproj
+++ b/windows/PluginCoreInterface.vcproj
@@ -154,6 +154,10 @@
 		<Filter
 			Name="Source"
 			>
+			<File
+				RelativePath="..\source\PrefixCommon.h"
+				>
+			</File>
 			<Filter
 				Name="buffer"
 				>
