--- a/windows/PluginCoreInterface.vcproj
+++ b/windows/PluginCoreInterface.vcproj
@@ -190,6 +190,10 @@
 				Name="parameter"
 				>
 				<File
+					RelativePath="..\source\plugincore\parameter\ParameterFloat.h"
+					>
+				</File>
+				<File
 					RelativePath="..\source\plugincore\parameter\ParameterSetMap.cpp"
 					>
 				</File>
