--- a/test/SConscript
+++ b/test/SConscript
@@ -1,4 +1,6 @@
-env = Environment(CPPPATH = ['../source', '../third-party/gtest/include'],
-    LIBPATH = ['../third-party/gtest/lib', '../source'],
-    LIBS = ['libgtest', 'libgtest_main', 'libPluginCoreInterface'])
-PluginCoreTest = env.Program('PluginCoreTest', Glob('plugincore/*/*.cpp'))
+Import('PluginCoreEnv')
+
+PluginCoreEnv.Append(CPPPATH = ['../source', '../third-party/gtest/include'])
+PluginCoreEnv.Append(LIBPATH = ['../third-party/gtest/lib', '../source'])
+PluginCoreEnv.Append(LIBS = ['libgtest', 'libgtest_main', 'libPluginCoreInterface'])
+PluginCoreTest = PluginCoreEnv.Program('PluginCoreTest', Glob('plugincore/*/*.cpp'))
